# lc3-assembler

./: .dockerignore  .gitignore  AGENTS.md  CHANGES.md  CI_FIX_EXPLANATION.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FUTURE_IMPROVEMENTS.md  IMPROVEMENTS.md  LC3_SIMULATOR_PLAN.md  LICENSE  LLM_CONTEXT.md  PRIORITY_FIXES.md  README.md  RELEASING.md  ROADMAP.md  SESSION_REPORT.md  changes to be made.md  test_edge_numbers.asm  test_edge_offset.asm  test_edge_structure.asm
.github/workflows/: ci.yml  release.yml
simulator/: Cargo.toml
simulator/src/: disasm.rs  machine.rs  main.rs  memory.rs  trap.rs
simulator/src/tui/: app.rs  mod.rs  ui.rs
src/: diagnostic.rs  error.rs  lib.rs  listing.rs  macro_expand.rs  main.rs  preprocessor.rs  warning.rs
src/encoder/: mod.rs
src/first_pass/: mod.rs  symbol_table.rs  tests.rs
src/lexer/: cursor.rs  mod.rs  tests.rs  token.rs
src/parser/: ast.rs  macros.rs  mod.rs  tests.rs
syntax-highlighting/: CHANGELOG.md  IMPLEMENTATION_REPORT.md  QUICKSTART.md  README.md  SUMMARY.txt  install.bat  install.sh  test.asm
syntax-highlighting/emacs/: lc3-mode.el
syntax-highlighting/sublime/: LC3.sublime-syntax
syntax-highlighting/vim/: lc3asm.vim
syntax-highlighting/vscode/: language-configuration.json  lc3asm.tmLanguage.json  package.json  snippets.json
tests/: integration_tests.rs
tests/test_programs/: all_directives.asm  all_instructions.asm  countdown.asm  edge_cases.asm  errors.asm  hello.asm  large_blkw.asm  loop.asm  multiple_labels.asm  stress.asm  subroutine.asm  trap_aliases.asm
