[package]
name = "lc3-assembler"
version = "1.0.0"
edition = "2021"
authors = ["LC-3 Assembler Contributors"]
description = "A production-ready assembler for the LC-3 (Little Computer 3) educational computer architecture"
readme = "README.md"
homepage = "https://github.com/your-repo/lc3-assembler"
repository = "https://github.com/your-repo/lc3-assembler"
license = "MIT"
keywords = ["lc3", "assembler", "computer-architecture", "education", "compiler"]
categories = ["command-line-utilities", "development-tools", "education"]
rust-version = "1.60"

[[bin]]
name = "lc3-assembler"
path = "src/main.rs"

[lib]
name = "lc3_assembler"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
