[package]
name = "lc3-assembler"
version = "1.0.0"
edition = "2021"
authors = ["LC-3 Assembler Contributors"]
description = "A production-ready assembler for the LC-3 (Little Computer 3) educational computer architecture"
readme = "README.md"
homepage = "https://github.com/adhirajagarwala/lc3-assembler"
repository = "https://github.com/adhirajagarwala/lc3-assembler"
license = "MIT"
keywords = ["lc3", "assembler", "computer-architecture", "education", "compiler"]
categories = ["command-line-utilities", "development-tools", "education"]
# 1.70 is the minimum that supports format string capture syntax (1.58)
# and is the oldest version in the CI test matrix.
# Note: Cargo.lock is committed as v4 (Cargo 1.78+); the MSRV CI job
# deletes it so Cargo 1.70 can regenerate a v3-compatible file.
rust-version = "1.70"

[[bin]]
name = "lc3-assembler"
path = "src/main.rs"

[lib]
name = "lc3_assembler"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
